update with new UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">NoteApp_JetPack_ComposeM3</string>
+    <string name="app_name">Easy Note</string>
 </resources>
